# HonestEQ

./: .gitignore  README.md
app/: Info.plist  Package.swift  README.md  build.sh
app/Sources/HonestEQ/: AppState.swift  HonestEQApp.swift
app/Sources/HonestEQ/Model/: Band.swift  Profile.swift
app/Sources/HonestEQ/Views/: BandColumn.swift  BandEditorView.swift  DBGrid.swift  DevicesSidebar.swift  MainWindow.swift  PersistentHorizontalScrollView.swift  ProfileSection.swift  ResponseCurveView.swift  TopControlsView.swift  VerticalSlider.swift
daemon/: EqBridge.cpp  EqBridge.hpp  Makefile  README.md  main.c
daemon/scripts/: com.honesteq.daemon.plist  install-launchd.sh  uninstall-launchd.sh
docs/: equalizer-plan.md  technical-plan.md  ui-design.md
driver/: HonestEQDriver.c  Info.plist  Makefile  README.md
driver/scripts/: install.sh  uninstall.sh
dsp/: CMakeLists.txt  Makefile
dsp/include/honesteq/: Biquad.hpp  BiquadChain.hpp  PeaceConfig.hpp  Wav.hpp
dsp/tests/: CMakeLists.txt  MicroTest.hpp  test_biquad.cpp
dsp/tools/: honesteq-render.cpp
profiles/: sample_HD650.txt  sony_ch720n_autoeq_v1.txt  sony_ch720n_autoeq_v2.txt  sony_ch720n_final.txt  sony_ch720n_neutral_sennheiser.txt  sony_ch720n_poweramp.txt  sony_ch720n_sennheiser_warmth.txt  sony_ch720n_warmth_+6.txt
